# fiap_pos_tech_challenge1

./: .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml
adapters/driven/infra/database/models/: customer.py  order.py  product.py
adapters/driven/infra/database/repositories/: customer_repository.py  order_repository.py  product_repository.py
adapters/driver/api/: urls.py
adapters/driver/api/controllers/: customer_controller.py  order_controller.py  product_controller.py
adapters/driver/api/serializers/: customer_serializer.py  order_serializer.py  product_serializer.py
config/: settings.py  urls.py
core/application/services/: customer_service.py  order_service.py  product_service.py
core/domain/entities/: customer.py  order.py  product.py
core/domain/repositories/: customer_repository.py  order_repository.py  product_repository.py
core/migrations/: 0001_initial.py
